appsrclayout - more improvements and main scrollbar fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,10 +1,11 @@
+@forward "@/styles/colors";
+@forward "@/styles/composer";
 @forward "@/styles/fonts";
+@forward "@/styles/mixins";
 @forward "@/styles/scrollbar";
 @forward "@/styles/tags/buttons";
-@use "@/styles/colors" as colors;
-@use "@/styles/mixins" as mix;
-@use "@/styles/variables" as vars;
-@use "sass:map";
+@forward "@/styles/variables";
+@use "@/styles/layout" as layout;
 
 * {
   box-sizing: border-box;
@@ -12,163 +13,21 @@
 }
 
 body {
-  font-size: vars.$font-medium;
-  height: 100vh;
-  margin: 0;
-  overflow: hidden;
-  padding: 0;
-  width: 100vw;
-
-  display: flex;
-  flex-direction: column;
-  gap: vars.$gap-small;
+  @include layout.body-layout;
 
   > footer {
-    flex: 0;
-    padding-top: vars.$gap-small;
-    font-size: vars.$font-small;
-
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    flex-flow: wrap;
-    gap: vars.$gap-small;
-
-    > p {
-      margin: 0;
-    }
-
-    > p.copyright {
-      flex: 1;
-      text-wrap: nowrap;
-    }
+    @include layout.footer-layout;
   }
 
-  > header,
+  > header {
+    @include layout.header-layout;
+  }
+
   > nav {
-    flex: 0;
+    @include layout.nav-layout;
   }
 
   > main {
-    flex: 1;
-    overflow-y: auto;
-    padding-bottom: vars.$gap-small;
+    @include layout.main-layout;
   }
-
-  $gradient-steps: "";
-
-  @each $percentage, $color in colors.$background-image-colors {
-    $gradient-steps: #{$gradient-steps}, #{$color} #{$percentage}#{"%"};
-  }
-
-  background-color: map.get(colors.$colors, "background");
-  background-image: linear-gradient(to bottom, $gradient-steps);
-  color: map.get(colors.$colors, "forecolor");
-  font-size: vars.$font-medium;
-  text-shadow: vars.$text-shadow;
-
-  @include mix.responsive-mix(
-    (
-      "padding": 0 vars.$screen-padding-large,
-    ),
-    (
-      "padding": 0 vars.$screen-padding-medium,
-    ),
-    (
-      "padding": 0 vars.$screen-padding-small,
-    )
-  );
 }
-
-// body {
-//   > header {
-//     flex: 0;
-//     display: flex;
-//     align-items: flex-start;
-//     gap: vars.$gap-small;
-
-//     padding-top: vars.$gap-small;
-
-//     > figure {
-//       flex: 0;
-//       margin: 0;
-
-//       > img {
-//         @include mix.border-mix;
-//         max-width: map.get(vars.$header-image-max-dimension, "width");
-//         max-height: map.get(vars.$header-image-max-dimension, "height");
-//       }
-//     }
-
-//     > section {
-//       flex: 1;
-//       display: flex;
-//       flex-direction: column;
-//       gap: vars.$gap-small;
-
-//       > h1 {
-//         margin: 0;
-//         color: map.get(colors.$colors, "primary");
-//       }
-
-//       > span {
-//         color: map.get(colors.$colors, "secondary");
-//       }
-
-//       > p {
-//         margin: 0;
-//       }
-//     }
-
-//     @include mix.responsive-mix(
-//       (
-//         "flex-direction": row,
-//       ),
-//       (
-//         "flex-direction": column,
-//       ),
-//       (
-//         "flex-direction": column,
-//       )
-//     );
-//   }
-
-//   > nav {
-//     flex: 0;
-//     display: flex;
-//     flex-direction: row;
-//     gap: vars.$gap-small;
-//     flex-flow: wrap;
-//   }
-
-//   > main {
-//     flex: 1;
-//     display: flex;
-//     flex-direction: column;
-//   }
-
-//   > footer {
-//     flex: 0;
-//     display: flex;
-//     flex-direction: row;
-//     flex-flow: wrap;
-//     align-items: center;
-//     gap: vars.$gap-small;
-
-//     padding: vars.$gap-small 0;
-//     color: map.get(colors.$colors, "secondary");
-
-//     > p {
-//       margin: 0;
-//     }
-
-//     > p.copyright {
-//       flex: 1;
-//       text-wrap: nowrap;
-//     }
-
-//     > p.contact {
-//       flex: 0;
-//     }
-//   }
-// }
