--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,18 +2,6 @@
 @use "colors" as colors;
 @use "variables" as vars;
 
-@mixin border-mix($position: "all") {
-  @if ($position == "all") {
-    border-width: vars.$border-width;
-    border-color: vars.$border-color;
-    border-style: vars.$border-style;
-  } @else {
-    border-#{$position}-width: vars.$border-width;
-    border-#{$position}-color: vars.$border-color;
-    border-#{$position}-style: vars.$border-style;
-  }
-}
-
 @mixin responsive-mix($large-props, $medium-props, $small-props) {
   @media (min-width: vars.$screen-medium) {
     @each $property, $value in $large-props {
